# Find-Dominant-Colors

./: .gitignore  README.md  pyproject.toml
dominant-colors/: homepage.py
dominant-colors/src/: main.py
